<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sensorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameSensor"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/detailsCommun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/vendeur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vendor" />

        <TextView
            android:id="@+id/power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/power" />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version" />

        <TextView
            android:id="@+id/resolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resolution" />
    </LinearLayout>

    <TextView
        android:id="@+id/sensorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messageSensor"
        android:textSize="22sp"
        android:textStyle="bold" />

</LinearLayout>